This file is here to allow devs to easily add stuff in the release notes for the next release, it allows easy syncing with the release team, since you don't have to be around when the release takes place...

Just dump whatever you want to have mentioned in the release notes here. Please take care that it is in a way that allows copy&paste to the release notes. That is making sure that spelling/grammar/whatever is usable and that you are using complete sentences, not just single words. Please do use forum syntax and do *NOT* split lines after 80 chars!

Stuff that belongs in here:
* groundbreaking changes (new campaigns, extremely new feature, ...)
* changed dependencies (new things, version bumps, stuff that was removed)
* known bugs

The release team should empty this file after each release.


=======
CHANGES
=======

[rasection="Campaigns"]
[list]
[/list]
[/rasection]

[rasection="User Interface"]
[list]
[/list]
[/rasection]

[rawarn="Deprecations and breaking changes"]
[list]
[/list]
[/rawarn]

[rasection="New lua/wml features"]
[list]
[/list]
[/rasection]

==========
KNOWN BUGS
==========

[raissue="Newly introduced in 1.13.x"]
[b]General bugs:[/b]

[list]
[/list]

[b]Bugs specific to macOS:[/b]
[list]
[*]The game may crash when opening the file dialog.
[/list]
[/raissue]

[raissue="Carried over from 1.12.x"]
[b]General bugs:[/b]

[list]
[*]The game can crash when planning recruits in Planning Mode.
[/list]

[b]Bugs specific to Microsoft Windows:[/b]

[list]
[/list]

[b]Bugs specific to macOS:[/b]

[list]
[*]Trackpad tap clicking is sometimes not recognized ([url=http://forums.wesnoth.org/viewtopic.php?f=4&t=39788]forum post[/url]).
[*]Unofficial builds with OpenMP support enabled randomly freeze (bug [issue]1260[/issue]).
[/list]
[/raissue]